Added MainScreen and MainViewModel.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
 
     // Test
     testImplementation 'junit:junit:4.13.2'
@@ -73,4 +74,5 @@ dependencies {
     // DI
     implementation "com.google.dagger:hilt-android:$hilt_verison"
     kapt "com.google.dagger:hilt-compiler:$hilt_verison"
+
 }
