Added HistoricalData, Mappers for data-domain layer. The screen make-up was made. Little architecture redesign.

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
         retrofit_version = '2.9.0'
         hilt_verison = '2.38.1'
     }
+    repositories {
+        mavenCentral()
+    }
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
     }
