--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,12 +51,16 @@ dependencies {
 
     // Core
     implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+
+    // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.12-rc"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.12-rc"
 
     // Test
     testImplementation 'junit:junit:4.13.2'
