--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_version = '1.2.0-rc02'
         retrofit_version = '2.9.0'
         hilt_verison = '2.38.1'
+        nav_version = '2.4.2'
     }
     repositories {
         mavenCentral()
