--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     // Core
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
 
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -62,6 +62,11 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.12-rc"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.12-rc"
+    
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:$nav_version"
