--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,11 +58,15 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
+    implementation 'androidx.activity:activity-compose:1.5.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.12-rc"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.24.12-rc"
-    
+
+    // Pager
+    implementation "com.google.accompanist:accompanist-pager:0.14.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.14.0"
+
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
